Add zone.js to Angular polyfills

--- a/angular.json
+++ b/angular.json
@@ -21,7 +21,9 @@
             "outputPath": "dist/treadmill-scanner-frontend",
             "index": "src/index.html",
             "browser": "src/main.ts",
-            "polyfills": [],
+            "polyfills": [
+              "zone.js"
+            ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
               "src/assets"
